fix(connect-flow): overflow style issues

--- a/ui/app/css/itcss/generic/index.scss
+++ b/ui/app/css/itcss/generic/index.scss
@@ -20,7 +20,7 @@ body {
   font-size: 16px;
 
   @media screen and (max-width: $break-small) {
-    overflow-y: overlay;
+    overflow-y: auto;
   }
 }
 
